--- a/test/grid.ipynb
+++ b/test/grid.ipynb
@@ -1053,12 +1053,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": null,
    "id": "d11f24db-958c-4260-b73c-9b63ea02a2d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gbp_solve_coarse(varis, prior_facs, horizontal_between_facs, vertical_between_facs, num_iters=50, visualize=False, prior_h=h3_fn, between_h=[h4_fn,h5_fn]):\n",
+    "def gbp_solve_coarse(varis, prior_facs, horizontal_between_facs, vertical_between_facs, num_iters=50, \n",
+    "                    visualize=False, prior_h=h3_fn, between_h=[h4_fn,h5_fn]):\n",
     "    energy_log = []\n",
     "    \n",
     "    \"\"\"\n",
@@ -1219,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": null,
    "id": "dcf79fc8",
    "metadata": {},
    "outputs": [],
