--- a/test.ipynb
+++ b/test.ipynb
@@ -2,10 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "6eccf680",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Jax plugin configuration error: Plugin module %s could not be loaded\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/yuzhou/anaconda3/envs/jax-gpu/lib/python3.11/site-packages/jax/_src/xla_bridge.py\", line 420, in discover_pjrt_plugins\n",
+      "    plugin_module = importlib.import_module(plugin_module_name)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/yuzhou/anaconda3/envs/jax-gpu/lib/python3.11/importlib/__init__.py\", line 126, in import_module\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1204, in _gcd_import\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1176, in _find_and_load\n",
+      "  File \"<frozen importlib._bootstrap>\", line 1147, in _find_and_load_unlocked\n",
+      "  File \"<frozen importlib._bootstrap>\", line 690, in _load_unlocked\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 940, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/home/yuzhou/anaconda3/envs/jax-gpu/lib/python3.11/site-packages/jax_plugins/xla_cuda12/__init__.py\", line 24, in <module>\n",
+      "    from jax._src.lib import triton\n",
+      "ImportError: cannot import name 'triton' from 'jax._src.lib' (/home/yuzhou/anaconda3/envs/jax-gpu/lib/python3.11/site-packages/jax/_src/lib/__init__.py)\n"
+     ]
+    }
+   ],
    "source": [
     "from gbp.gbp import *\n",
     "from gbp.factor import *\n",
@@ -14,24 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "58b626c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    }
+   ],
    "source": [
     "positions, prior_meas, between_meas = generate_grid_slam_data(H=16, W=16, \n",
     "                                    prior_noise_std=1, odom_noise_std=0.1, seed=34)\n",
     "varis, prior_facs, between_facs = build_pose_slam_graph(N=256, prior_meas=prior_meas, between_meas=between_meas, \n",
     "                                                        prior_std=1, odom_std=0.01,\n",
-    "                                                        Ni_v=10, D=2)\n",
-    "\n",
-    "\n",
-    "\n"
+    "                                                        Ni_v=10, D=2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "2d0f66e4",
    "metadata": {},
    "outputs": [],
@@ -43,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "c960a59d",
    "metadata": {},
    "outputs": [],
@@ -63,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "cedd09a8",
    "metadata": {},
    "outputs": [],
@@ -77,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "e5e767b3",
    "metadata": {},
    "outputs": [],
@@ -94,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "a48a7eb8",
    "metadata": {},
    "outputs": [],
@@ -108,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "f9efc421",
    "metadata": {},
    "outputs": [
@@ -142,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "0cf59c8b",
    "metadata": {},
    "outputs": [
@@ -29107,7 +29136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "1649948f",
    "metadata": {},
    "outputs": [
