--- a/hierarchy/test.ipynb
+++ b/hierarchy/test.ipynb
@@ -2393,6 +2393,193 @@
     "        energy = fg.energy_map(include_priors=True, include_factors=True)\n",
     "        print(f\"Iter {it+1:03d} | Energy = {energy:.6f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae955f81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae20192",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85feee63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c79172c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9ad42b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "non-linear super graph construction\n",
+    "\"\"\"\n",
+    "\n",
+    "def build_super_graph(layers, base_dim=2, prior_sigma=1.0, odom_sigma=1.0):\n",
+    "    \"\"\"\n",
+    "    基于 layers[-2] 的 base graph，构造 super graph\n",
+    "    layers[-1] 必须是 super layer\n",
+    "    \"\"\"\n",
+    "\n",
+    "    base_graph = layers[-2][\"graph\"]\n",
+    "    base_nodes = layers[-2][\"nodes\"]\n",
+    "    base_edges = layers[-2][\"edges\"]\n",
+    "\n",
+    "    super_nodes = layers[-1][\"nodes\"]\n",
+    "    super_edges = layers[-1][\"edges\"]\n",
+    "    node_map = layers[-1][\"node_map\"]   # base_id -> super_id\n",
+    "\n",
+    "    # === 1. 反向映射：super_id -> [base_ids] ===\n",
+    "    super_groups = {}\n",
+    "    for b_id, s_id in node_map.items():\n",
+    "        super_groups.setdefault(s_id, []).append(b_id)\n",
+    "\n",
+    "    fg = FactorGraph(nonlinear_factors=False, eta_damping=0)\n",
+    "\n",
+    "    # === 2. 创建 super VariableNodes ===\n",
+    "    super_var_nodes = {}\n",
+    "    for i, s in enumerate(super_nodes):\n",
+    "        dofs = len(super_groups[s[\"data\"][\"id\"]]) * base_dim\n",
+    "        v = VariableNode(i, dofs=dofs)\n",
+    "        super_var_nodes[s[\"data\"][\"id\"]] = v\n",
+    "        fg.var_nodes.append(v)\n",
+    "\n",
+    "    fg.n_var_nodes = len(fg.var_nodes)\n",
+    "\n",
+    "    # === 3. 构造 super prior factors ===\n",
+    "    def make_super_prior_factor(sid, base_factors):\n",
+    "        group = super_groups[sid]\n",
+    "\n",
+    "        def meas_fn_super_prior(x_super, *args):\n",
+    "            resids = []\n",
+    "            for f in base_factors:\n",
+    "                ids = [v.ID for v in f.adj_var_nodes]\n",
+    "                if len(ids) == 1:   # base prior\n",
+    "                    idx = group.index(ids[0])\n",
+    "                    xi = x_super[idx*base_dim:(idx+1)*base_dim]\n",
+    "                    resids.append(f.meas_fn(xi) - f.z)\n",
+    "                elif len(ids) == 2 and all(i in group for i in ids):\n",
+    "                    # base between factor 内部\n",
+    "                    i, j = ids\n",
+    "                    xi = x_super[group.index(i)*base_dim:(group.index(i)+1)*base_dim]\n",
+    "                    xj = x_super[group.index(j)*base_dim:(group.index(j)+1)*base_dim]\n",
+    "                    resids.append(f.meas_fn(np.r_[xi, xj]) - f.z)\n",
+    "            return np.concatenate(resids) if resids else np.zeros(0)\n",
+    "\n",
+    "        def jac_fn_super_prior(x_super, *args):\n",
+    "            J_blocks = []\n",
+    "            for f in base_factors:\n",
+    "                ids = [v.ID for v in f.adj_var_nodes]\n",
+    "                if len(ids) == 1:\n",
+    "                    idx = group.index(ids[0])\n",
+    "                    J = f.jac_fn(np.zeros(base_dim))\n",
+    "                    row = np.zeros((J.shape[0], len(group)*base_dim))\n",
+    "                    row[:, idx*base_dim:(idx+1)*base_dim] = J\n",
+    "                    J_blocks.append(row)\n",
+    "                elif len(ids) == 2 and all(i in group for i in ids):\n",
+    "                    i, j = ids\n",
+    "                    J_local = f.jac_fn(np.zeros(2*base_dim))\n",
+    "                    row = np.zeros((J_local.shape[0], len(group)*base_dim))\n",
+    "                    row[:, group.index(i)*base_dim:(group.index(i)+1)*base_dim] = J_local[:, :base_dim]\n",
+    "                    row[:, group.index(j)*base_dim:(group.index(j)+1)*base_dim] = J_local[:, base_dim:]\n",
+    "                    J_blocks.append(row)\n",
+    "            return np.vstack(J_blocks) if J_blocks else np.zeros((0, len(group)*base_dim))\n",
+    "\n",
+    "        z_super = []\n",
+    "        for f in base_factors:\n",
+    "            ids = [v.ID for v in f.adj_var_nodes]\n",
+    "            if len(ids) == 1 or all(i in group for i in ids):\n",
+    "                z_super.append(f.z)\n",
+    "        z_super = np.concatenate(z_super) if z_super else np.zeros(0)\n",
+    "\n",
+    "        return meas_fn_super_prior, jac_fn_super_prior, z_super\n",
+    "\n",
+    "    for sid, group in super_groups.items():\n",
+    "        # 收集组内的 base factors\n",
+    "        base_factors = [f for f in base_graph.factors if all(v.ID in group for v in f.adj_var_nodes)]\n",
+    "        meas_fn, jac_fn, z = make_super_prior_factor(sid, base_factors)\n",
+    "        f = Factor(len(fg.factors), [super_var_nodes[sid]], z, prior_sigma, meas_fn, jac_fn)\n",
+    "        f.type = \"super_prior\"\n",
+    "        f.compute_factor(linpoint=np.zeros(super_var_nodes[sid].dofs), update_self=True)\n",
+    "        fg.factors.append(f)\n",
+    "        super_var_nodes[sid].adj_factors.append(f)\n",
+    "\n",
+    "    # === 4. 构造 super between factors ===\n",
+    "    def make_super_between_factor(sidA, sidB, base_factors):\n",
+    "        groupA, groupB = super_groups[sidA], super_groups[sidB]\n",
+    "        cross = [f for f in base_factors if any(v.ID in groupA for v in f.adj_var_nodes)\n",
+    "                                          and any(v.ID in groupB for v in f.adj_var_nodes)]\n",
+    "\n",
+    "        def meas_fn_super_between(x_super, *args):\n",
+    "            nA = len(groupA)*base_dim\n",
+    "            xA, xB = x_super[:nA], x_super[nA:]\n",
+    "            resids = []\n",
+    "            for f in cross:\n",
+    "                i, j = [v.ID for v in f.adj_var_nodes]\n",
+    "                if i in groupA:\n",
+    "                    xi = xA[groupA.index(i)*base_dim:(groupA.index(i)+1)*base_dim]\n",
+    "                    xj = xB[groupB.index(j)*base_dim:(groupB.index(j)+1)*base_dim]\n",
+    "                else:\n",
+    "                    xi = xB[groupB.index(i)*base_dim:(groupB.index(i)+1)*base_dim]\n",
+    "                    xj = xA[groupA.index(j)*base_dim:(groupA.index(j)+1)*base_dim]\n",
+    "                resids.append(f.meas_fn(np.r_[xi, xj]) - f.z)\n",
+    "            return np.concatenate(resids) if resids else np.zeros(0)\n",
+    "\n",
+    "        def jac_fn_super_between(x_super, *args):\n",
+    "            nA = len(groupA)*base_dim\n",
+    "            J_blocks = []\n",
+    "            for f in cross:\n",
+    "                i, j = [v.ID for v in f.adj_var_nodes]\n",
+    "                J_local = f.jac_fn(np.zeros(2*base_dim))\n",
+    "                row = np.zeros((J_local.shape[0], (len(groupA)+len(groupB))*base_dim))\n",
+    "                if i in groupA:\n",
+    "                    row[:, groupA.index(i)*base_dim:(groupA.index(i)+1)*base_dim] = J_local[:, :base_dim]\n",
+    "                    row[:, nA + groupB.index(j)*base_dim:nA + (groupB.index(j)+1)*base_dim] = J_local[:, base_dim:]\n",
+    "                else:\n",
+    "                    row[:, nA + groupB.index(i)*base_dim:nA + (groupB.index(i)+1)*base_dim] = J_local[:, :base_dim]\n",
+    "                    row[:, groupA.index(j)*base_dim:(groupA.index(j)+1)*base_dim] = J_local[:, base_dim:]\n",
+    "                J_blocks.append(row)\n",
+    "            return np.vstack(J_blocks) if J_blocks else np.zeros((0, (len(groupA)+len(groupB))*base_dim))\n",
+    "\n",
+    "        z_super = np.concatenate([f.z for f in cross]) if cross else np.zeros(0)\n",
+    "\n",
+    "        return meas_fn_super_between, jac_fn_super_between, z_super\n",
+    "\n",
+    "    for e in super_edges:\n",
+    "        u, v = e[\"data\"][\"source\"], e[\"data\"][\"target\"]\n",
+    "        meas_fn, jac_fn, z = make_super_between_factor(u, v, base_graph.factors)\n",
+    "        f = Factor(len(fg.factors), [super_var_nodes[u], super_var_nodes[v]], z, odom_sigma, meas_fn, jac_fn)\n",
+    "        f.type = \"super_between\"\n",
+    "        f.compute_factor(linpoint=np.zeros(super_var_nodes[u].dofs + super_var_nodes[v].dofs), update_self=True)\n",
+    "        fg.factors.append(f)\n",
+    "        super_var_nodes[u].adj_factors.append(f)\n",
+    "        super_var_nodes[v].adj_factors.append(f)\n",
+    "\n",
+    "    fg.n_factor_nodes = len(fg.factors)\n",
+    "    return fg\n"
+   ]
   }
  ],
  "metadata": {
