--- a/hierarchy/test.ipynb
+++ b/hierarchy/test.ipynb
@@ -2433,10 +2433,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "non-linear super graph construction\n",
-    "\"\"\"\n",
-    "\n",
     "def build_super_graph(layers, base_dim=2, prior_sigma=1.0, odom_sigma=1.0):\n",
     "    \"\"\"\n",
     "    基于 layers[-2] 的 base graph，构造 super graph\n",
@@ -2473,20 +2469,20 @@
     "        group = super_groups[sid]\n",
     "\n",
     "        def meas_fn_super_prior(x_super, *args):\n",
-    "            resids = []\n",
+    "            meas = []\n",
     "            for f in base_factors:\n",
     "                ids = [v.ID for v in f.adj_var_nodes]\n",
     "                if len(ids) == 1:   # base prior\n",
     "                    idx = group.index(ids[0])\n",
     "                    xi = x_super[idx*base_dim:(idx+1)*base_dim]\n",
-    "                    resids.append(f.meas_fn(xi) - f.z)\n",
+    "                    meas_fn.append(f.meas_fn(xi) - f.z)\n",
     "                elif len(ids) == 2 and all(i in group for i in ids):\n",
     "                    # base between factor 内部\n",
     "                    i, j = ids\n",
     "                    xi = x_super[group.index(i)*base_dim:(group.index(i)+1)*base_dim]\n",
     "                    xj = x_super[group.index(j)*base_dim:(group.index(j)+1)*base_dim]\n",
-    "                    resids.append(f.meas_fn(np.r_[xi, xj]) - f.z)\n",
-    "            return np.concatenate(resids) if resids else np.zeros(0)\n",
+    "                    meas_fn.append(f.meas_fn(np.r_[xi, xj]) - f.z)\n",
+    "            return np.concatenate(meas_fn) if meas_fn else np.zeros(0)\n",
     "\n",
     "        def jac_fn_super_prior(x_super, *args):\n",
     "            J_blocks = []\n",
