--- a/hierarchy/test - 副本 - 副本.ipynb
+++ b/hierarchy/test - 副本 - 副本.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 904,
+   "execution_count": 263,
    "id": "f7f39044",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 905,
+   "execution_count": 264,
    "id": "0f6f6b31",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 906,
+   "execution_count": 265,
    "id": "7f8f1fe2",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 907,
+   "execution_count": 266,
    "id": "c4d9f60f",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 908,
+   "execution_count": 267,
    "id": "e13ace2a",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 909,
+   "execution_count": 268,
    "id": "d0e18f77",
    "metadata": {},
    "outputs": [],
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 910,
+   "execution_count": null,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1571,7 +1571,6 @@
     "        varis_abs_mu = B_reduced.T @ varis_sup_mu          # Projected natural mean: shape (2,)\n",
     "        varis_abs_sigma = B_reduced.T @ varis_sup_sigma @ B_reduced  # Projected covariance: shape (2, 2)\n",
     "        ks[sid] = varis_sup_mu - B_reduced @ varis_abs_mu  # Store the offset for this variable\n",
-    "\n",
     "\n",
     "        varis_abs_lam = np.linalg.inv(varis_abs_sigma)  # Inverse covariance (precision matrix): shape (2, 2)\n",
     "        varis_abs_eta = varis_abs_lam @ varis_abs_mu  # Natural parameters: shape (2,)\n",
@@ -1664,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 911,
+   "execution_count": 270,
    "id": "9a726136",
    "metadata": {},
    "outputs": [],
@@ -1698,12 +1697,33 @@
     "\n",
     "abs_nodes, abs_edges   = copy_to_abs(super_nodes, super_edges, super_layer_idx + 1)\n",
     "layers.append({\"name\":f\"abs{1}\", \"nodes\":abs_nodes, \"edges\":abs_edges})\n",
-    "layers[-1][\"graph\"], Bs, ks = build_abs_graph(layers, 100)"
+    "layers[-1][\"graph\"], Bs, ks = build_abs_graph(layers, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 912,
+   "execution_count": 271,
+   "id": "3e1ea9f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(layers[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
    "id": "88b56ca2",
    "metadata": {},
    "outputs": [],
@@ -1711,8 +1731,11 @@
     "def vcycle_loop(layers, update_svd=False):\n",
     "    if update_svd:    \n",
     "        for i in len(layers):\n",
+    "            if layers[i][\"name\"].startswith(\"super\"):\n",
+    "                layers[i][\"graph\"] = build_super_graph(layers[:i+1])\n",
     "            if layers[i][\"name\"].startswith(\"abs\"):\n",
-    "                layers[i][\"graph\"], layers[i][\"graph\"], layers[i][\"graph\"] = build_abs_graph(layers, 2)\n",
+    "                layers[i][\"graph\"], layers[i][\"Bs\"], layers[i][\"ks\"] = build_abs_graph(layers[:i+1], 2)\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -1773,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 913,
+   "execution_count": 273,
    "id": "3a5e78c4",
    "metadata": {},
    "outputs": [
@@ -1897,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 914,
+   "execution_count": 274,
    "id": "bbf7f4c0",
    "metadata": {},
    "outputs": [
@@ -2033,67 +2056,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 915,
-   "id": "a6538b2a",
+   "execution_count": null,
+   "id": "a8bccbca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.3720896  -0.01409028  0.05294995 -0.15098514  0.72263135  0.28838731\n",
-      " -0.7985631   0.2865081 ]\n",
-      "[-0.3720896  -0.01409028  0.05294995 -0.15098514  0.72263135  0.28838731\n",
-      " -0.7985631   0.2865081 ]\n",
-      "[-0.37208967 -0.01409037  0.05294995 -0.15098514  0.72263135  0.28838731\n",
-      " -0.79856324  0.28650829]\n"
+      "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
+      " -5.19983453 27.30061548]\n",
+      "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
+      " -5.19983453 27.30061548]\n",
+      "[-0.38119693 -0.01443515]\n",
+      "[[1.17560741e-02 1.25857487e-18]\n",
+      " [1.25857487e-18 1.17560741e-02]]\n",
+      "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
+      " -5.19983453 27.30061548]\n"
      ]
     }
    ],
    "source": [
     "absgraph = layers[-1][\"graph\"]\n",
+    "\n",
+    "print(Bs[0] @ absgraph.var_nodes[0].mu + ks[0])\n",
+    "print(layers[-2][\"graph\"].var_nodes[0].mu)\n",
+    "\n",
     "print(absgraph.var_nodes[0].belief.eta)\n",
+    "print(absgraph.var_nodes[0].belief.lam)\n",
     "\n",
     "#absgraph.update_all_beliefs(absgraph.var_nodes)\n",
-    "for i in range(10):\n",
+    "for i in range(100):\n",
     "    absgraph.compute_all_messages(absgraph.factors, local_relin=True)\n",
-    "print(absgraph.var_nodes[0].belief.eta)\n",
+    "    absgraph.update_all_beliefs(absgraph.var_nodes)\n",
     "\n",
     "\n",
-    "absgraph.update_all_beliefs(absgraph.var_nodes)\n",
-    "\n",
-    "print(absgraph.var_nodes[0].belief.eta)"
+    "print(Bs[0] @ absgraph.var_nodes[0].mu + ks[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cb93010",
+   "execution_count": 276,
+   "id": "65b2ea11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.38119693 -0.01443515]\n",
+      "[[1.17560741e-02 1.25857487e-18]\n",
+      " [1.25857487e-18 1.17560741e-02]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(absgraph.var_nodes[0].belief.eta)\n",
+    "print(absgraph.var_nodes[0].belief.lam)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 277,
    "id": "ba73f892",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.3720896 , -0.01409028])"
+      ]
+     },
+     "execution_count": 277,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs[0].T@supergraph.factors[0].messages[0].eta + Bs[0].T@supergraph.factors[2].messages[0].eta"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 916,
+   "execution_count": 278,
+   "id": "891cc038",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 2)"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "id": "84c6508c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.14752049e-02, 1.03492005e-18],\n",
+       "       [1.03492005e-18, 1.14752049e-02]])"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs[0].T@supergraph.factors[0].messages[0].lam@Bs[0] + Bs[0].T@supergraph.factors[2].messages[0].lam@Bs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
    "id": "8cda2b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.686412245746382"
+       "10.686408732643704"
       ]
      },
-     "execution_count": 916,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,17 +2202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 917,
+   "execution_count": 281,
    "id": "64b1b711",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16.507932832464338"
+       "16.507938987468407"
       ]
      },
-     "execution_count": 917,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 918,
+   "execution_count": 282,
    "id": "9572fcb9",
    "metadata": {},
    "outputs": [
@@ -2135,7 +2233,7 @@
        "193.35569060552677"
       ]
      },
-     "execution_count": 918,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 919,
+   "execution_count": 283,
    "id": "2b345c43",
    "metadata": {},
    "outputs": [
@@ -2159,7 +2257,7 @@
        "         0.]])"
       ]
      },
-     "execution_count": 919,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2172,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 920,
+   "execution_count": 284,
    "id": "b18722b5",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2307,7 @@
        "         0.  ,  0.  ,  0.  ,  0.  ,  0.  ]])"
       ]
      },
-     "execution_count": 920,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2220,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 921,
+   "execution_count": 285,
    "id": "f8895f6d",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2329,7 @@
        "       23.53412873, -5.19983453, 27.30061548])"
       ]
      },
-     "execution_count": 921,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 922,
+   "execution_count": 286,
    "id": "8507ed0b",
    "metadata": {},
    "outputs": [
@@ -2253,7 +2351,7 @@
        "       23.53412873, -5.19983453, 27.30061548])"
       ]
      },
-     "execution_count": 922,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
